--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,9 @@
   --border-bottom: 1px solid var(--grey-light-2);
 }
 
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
+
 * {
   margin: 0;
   padding: 0;
@@ -31,6 +34,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px --> 10px/16px = 62.5%
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
