--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -12,6 +12,12 @@
   align-items: center;
   justify-content: center;
   flex: 0 0 40%;
+
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -123,11 +129,21 @@
   list-style: none;
   margin-top: 3rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 1.5rem;
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+        margin-right: 1rem;
+      }
     }
   }
 
@@ -165,6 +181,13 @@
     align-items: center;
     position: relative;
     z-index: 10;
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      padding: 1rem;
+    }
   }
 
   &__icon {
@@ -172,6 +195,13 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: 0.7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -182,6 +212,10 @@
   padding: 2.5rem;
   text-align: center;
   color: var(--grey-light-4);
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 /////////////////////////////////
@@ -209,6 +243,11 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1rem 2rem;
+    }
   }
 
   &__stars {
@@ -250,11 +289,19 @@
     font-size: 2.25rem;
     font-weight: 400;
     margin-bottom: -3px;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.5rem;
+    }
   }
 }
 
@@ -358,6 +405,10 @@
     color: var(--grey-dark-2);
   }
 
+  &__friends {
+    display: flex;
+  }
+
   &__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -381,6 +432,15 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin-right: 0;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -438,6 +498,10 @@
   padding: 3.5rem;
   text-align: center;
   background-color: #fff;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 1.2rem;
